--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,51 @@ list-style-type: none;
 
 li{
 display:inline;
-padding: 30px;
+padding: 10px;
 font-size: x-large;
 
 }
+}
+
+.about1{
+    font-size: xx-large;
+    font-family: fantasy;
+    text-align: center;
+    border-style: dashed;
+    border-color: aqua;
+}
+
+.about2{
+    font-size:medium;
+    font-family: fantasy;
+    text-align: center;
+    border-style: dashed;
+    border-color: aqua;
+}
+
+.about3{
+    font-size:medium;
+    font-family: fantasy;
+    text-align: center;
+    border-style: dashed;
+    border-color: aqua;
+
+
+}
+
+.about4{
+    font-size:medium;
+    font-family: fantasy;
+    text-align: center;
+    border-style: dashed;
+    border-color: aqua;
+
+
+}
+
+
+img{
+    max-width: 50%;
+    max-height: 50%;
+    margin-left: 50px;
 }
