--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,46 @@ ul{
 
 
 img{
-    max-width: 50%;
-    max-height: 50%;
-    margin-left: 50px;
+    max-width: 40%;
+    max-height: 40%;
+    margin-left: 70px;
+    
+}
+
+.Projectintro{
+    font-size: xx-large;
+    font-family: fantasy;
+    text-align: center;
+    border-style: dashed;
+    border-color: aqua;
+}
+
+
+.Project1 {
+    font-size:medium;
+    font-family: fantasy;
+    text-align: center;
+    border-style: dashed;
+    border-color: aqua; 
+    
+}
+
+.Project2 {
+    font-size:medium;
+    font-family: fantasy;
+    text-align: center;
+    border-style: dashed;
+    border-color: aqua; 
+    
+
+}
+
+.Project3{
+
+    font-size:medium;
+    font-family: fantasy;
+    text-align: center;
+    border-style: dashed;
+    border-color: aqua; 
+
 }
